kubernetes/apps/box/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: box-api
spec:
  selector:
    matchLabels:
      app: box-api
  template:
    metadata:
      labels:
        app: box-api
    spec:
      containers:
        - name: box-api
          image: samy266/box:3675af0 # Manage better versionning
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 80
