kubernetes/apps/box/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: box-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - box.smokhtari.com
      secretName: box-tls
  rules:
    - host: box.smokhtari.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: box-api
                port:
                  number: 80
